--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <div class="items">4 items left</div>
         <div class="items">4 items left</div>
         <div class="items">4 items left</div>
+
+        <div class="items">4 items left</div>
         <div class="all">All</div>
         <div class="completed">Completed</div>
         <div class="clear">Clear Completed</div>
