--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="todostyle.css">
+  <link rel="stylesheet" href="../todo-app-main/css/style.css">
   <title>Frontend Mentor | Todo app</title>
   <style>
   </style>
