try to do image as link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div  class="container-main">
     <div class="container">
       <div>
-        <div class="img-moon"><img src="./images/icon-moon.svg" alt="moon"></div>
+        <a href="../todo-app-main/darkstyle.scss"></a>
         <h1 class="head-todo">TODO</h1>
       </div>
       <div class="new-todo">
@@ -25,6 +25,7 @@
       <div class="puteem-element">
         <div class="items">4 items left</div>
         <div class="all">All</div>
+        <div class="Active">Active</div>
         <div class="completed">Completed</div>
         <div class="clear">Clear Completed</div>
       </div>
