--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link id="stylesheet" rel="stylesheet" href="../todo-app-main/css/style.css">
+  <link id="stylesheet" rel="stylesheet" href="../todo-app-main/css/light-mode.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
+  <link rel="stylesheet"  href="../todo-app-main/css/font-awesome.css">
+
   <title>Frontend Mentor | Todo app</title>
   <style>
   </style>
@@ -14,24 +17,30 @@
   <div  class="container-main">
     <div class="container">
       <div>
-       <button class="mode" onclick="swapStyle"("dark-style.scss")></button>
+       <button id="dark-mode-toggle" onclick="toggleTheme()" ></button>
         <h1 class="head-todo">TODO</h1>
       </div>
       <div class="new-todo">
-        <form>
-          <input type="text" id="fname" name="new todo" placeholder="creat a new todo">
-          </form>
-    </div>
-    <div class="list">
+        <i class="fa fa-check-circle co" job="complete" id="0"></i>
+        <input type="text" id="input" placeholder="create new todo"> 
+      </div>
+
+    <ul id="list">
+      
+     <li class="item">
+      <i class="fa fa-check-circle co" job="complete" id="0"></i>
+      <p class="text"></p>
+      <i  class="fa fa-trash-o de" job="delete" id="0"></i>
+    </li>  
       <div class="puteem-element">
         <div class="items">4 items left</div>
         <div class="all">All</div>
         <div class="Active">Active</div>
         <div class="completed">Completed</div>
-        <div class="clear">Clear Completed</div>
+        <div class="clear">clear Completed</div>
       </div>
-    </div>
-  </div>
+    </ul>
+    
 <div class="drag">Drag and drop to reorder list</div>
 
   <div class="attribution">
@@ -42,9 +51,17 @@
 </div>
 
 <script>
-  function swapStyle(sheet) {
-    document.getElementById("stylesheet").href = sheet;
+  function toggleTheme() {
+    console.log("here")
+      var theme = document.getElementsByTagName('link')[1];
+      if (theme.getAttribute('href').includes('light-mode.css')) {
+          theme.setAttribute('href', '../todo-app-main/css/dark-mode.css');
+      } else {
+          theme.setAttribute('href', '../todo-app-main/css/light-mode.css');
+      }
   }
-  </script>
+</script>
+
+<script src"js/list.js"></script> 
 </body>
 </html>
