--- a/index.html
+++ b/index.html
@@ -20,19 +20,21 @@
        <button id="dark-mode-toggle" onclick="toggleTheme()" ></button>
         <h1 class="head-todo">TODO</h1>
       </div>
-      <div class="new-todo">
+      <!-- this is for input todo -->
+      <div class="add-to-do">
         <i class="fa fa-check-circle co" job="complete" id="0"></i>
         <input type="text" id="input" placeholder="create new todo"> 
       </div>
-
+      <!-- ----------------------------- -->
+      <div class="content">
     <ul id="list">
       
      <li class="item">
       <i class="fa fa-check-circle co" job="complete" id="0"></i>
       <p class="text"></p>
       <i  class="fa fa-trash-o de" job="delete" id="0"></i>
-    </li>  
-      <div class="puteem-element">
+    </li>    
+      <div class="putton-element">
         <div class="items">4 items left</div>
         <div class="all">All</div>
         <div class="Active">Active</div>
@@ -40,7 +42,7 @@
         <div class="clear">clear Completed</div>
       </div>
     </ul>
-    
+  </div>
 <div class="drag">Drag and drop to reorder list</div>
 
   <div class="attribution">
