--- a/index.html
+++ b/index.html
@@ -1,69 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link id="stylesheet" rel="stylesheet" href="../todo-app-main/css/light-mode.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
-  <link rel="stylesheet"  href="../todo-app-main/css/font-awesome.css">
-
-  <title>Frontend Mentor | Todo app</title>
-  <style>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32"
+      href="./images/favicon-32x32.png">
+    <link id="stylesheet" rel="stylesheet"
+      href="../todo-app-main/css/light-mode.css">
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Titillium+Web">
+    <link rel="stylesheet" href="../todo-app-main/css/font-awesome.css">
+    <title>Frontend Mentor | Todo app</title>
+    <style>
+    
   </style>
-</head>
-<body>
-
-  <div  class="container-main">
-    <div class="container">
-      <div>
-       <button id="dark-mode-toggle" onclick="toggleTheme()" ></button>
-        <h1 class="head-todo">TODO</h1>
+  </head>
+  <body>
+    <div class="container-main">
+      <div class="container">
+        <div>
+          <button id="dark-mode-toggle" onclick="toggleTheme()"></button>
+          <h1 class="head-todo">TODO</h1>
+        </div>
+        <!-- this is for input todo -->
+        <div class="add-to-do">
+          <i class="fa fa-check-circle co" job="complete" id="0"></i>
+          <input type="text" id="input" placeholder="create new todo ...">
+        </div>
+        <!-- ----------------------------- -->
+        <div class="content">
+          <ul id="list">
+            <div class="putton-element">
+              <div class="num-items">4 items left</div>
+              <div class="all">All</div>
+              <div class="Active">Active</div>
+              <div class="completed">Completed</div>
+              <div class="clear">clear Completed</div>
+            </div>
+          </ul>
+        </div>
+        <div class="drag">Drag and drop to reorder list</div>
+        <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge"
+            target="_blank">Frontend Mentor</a>.
+          Coded by <a href="#">Amr Shayeb</a>
+        </div>.
       </div>
-      <!-- this is for input todo -->
-      <div class="add-to-do">
-        <i class="fa fa-check-circle co" job="complete" id="0"></i>
-        <input type="text" id="input" placeholder="create new todo"> 
-      </div>
-      <!-- ----------------------------- -->
-      <div class="content">
-    <ul id="list">
-      
-     <li class="item">
-      <i class="fa fa-check-circle co" job="complete" id="0"></i>
-      <p class="text"></p>
-      <i  class="fa fa-trash-o de" job="delete" id="0"></i>
-    </li>    
-      <div class="putton-element">
-        <div class="items">4 items left</div>
-        <div class="all">All</div>
-        <div class="Active">Active</div>
-        <div class="completed">Completed</div>
-        <div class="clear">clear Completed</div>
-      </div>
-    </ul>
-  </div>
-<div class="drag">Drag and drop to reorder list</div>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Amr Shayeb</a>
-  </div>.
-  </div>
-</div>
-
-<script>
-  function toggleTheme() {
-    console.log("here")
+    </div>
+    <script>
+    function toggleTheme() {
+      console.log("here")
       var theme = document.getElementsByTagName('link')[1];
       if (theme.getAttribute('href').includes('light-mode.css')) {
-          theme.setAttribute('href', '../todo-app-main/css/dark-mode.css');
+        theme.setAttribute('href', '../todo-app-main/css/dark-mode.css');
       } else {
-          theme.setAttribute('href', '../todo-app-main/css/light-mode.css');
+        theme.setAttribute('href', '../todo-app-main/css/light-mode.css');
       }
-  }
-</script>
-
-<script src"js/list.js"></script> 
-</body>
+      }
+      </script>
+    <script src="list.js"></script>
+  </body>
 </html>
