doing the size and formate the code

--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32"
-      href="./images/favicon-32x32.png">
-    <link id="stylesheet" rel="stylesheet"
-      href="../todo-app-main/css/light-mode.css">
-    <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Titillium+Web">
+    <link rel="icon" type="image/png" sizes="32x32"href="./images/favicon-32x32.png">
+    <link id="stylesheet" rel="stylesheet"href="../todo-app-main/css/light-mode.css">
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Titillium+Web">
     <link rel="stylesheet" href="../todo-app-main/css/font-awesome.css">
     <title>Frontend Mentor | Todo app</title>
     <style>
@@ -17,8 +14,9 @@
   </head>
   <body>
     <div class="container-main">
+      <div class="image"></div>
       <div class="container">
-        <div>
+        <div class="head">
           <button id="dark-mode-toggle" onclick="toggleTheme()"></button>
           <h1 class="head-todo">TODO</h1>
         </div>
