--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
       }
       }
       </script>
-    <script src="list.js"></script>
+    <script src="js/list.js"></script>
   </body>
 </html>
